add host api
